# simpleClientForEndoScout_OSX

./: CMakeLists.txt  simpleClientForEndoScout_OSX.c
